# shepherd

./: .editorconfig  .gitignore  Cargo.toml  license.txt  pyproject.toml  readme.md
.cargo/: config.toml
docs/: tag_graph.ipynb
lib/: Cargo.toml
lib/src/: feed.rs  graph.rs  lib.rs  sheep.rs  shepherd.rs  simulation.rs
src/: args.rs  feed.rs  graph.rs  ids.rs  main.rs  sheep.rs  shepherd.rs  simulation.rs
src/shepherd/: __init__.py  epoch.py  feed.py  graph.py  ids.py  sheep.py  simulation.py  tag_graph.py
src/shepherd/sheep/: base.py  dummy.py
src/shepherd/shepherd/: base.py  dummy.py
