[package]
name = "shepherd"
description = "flock simulation"
version = "0.0.0"
authors = ["superwhiskers <whiskerdev@protonmail.com>"]
repository = "https://github.com/superwhiskers/flock"
readme = "readme.md"
edition = "2021"
license = "0BSD"

[dependencies]
itertools = "0.13"
petgraph = "0.6"
rand = "0.8"
statrs = "0.17"
serde_json = "1"

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.polars]
version = "0.44"
features = ["performant"]

[profile.release]
opt-level = 3
codegen-units = 1
debug = false
strip = "symbols"
panic = "abort"
lto = "thin"
