[project]
name = "shepherd"
version = "0.0.0"
description = "flock simulation"
authors = [
    { name = "superwhiskers", email = "whiskerdev@protonmail.com" }
]
dependencies = [
    "prophet>=1.1.5",
    "pandas>=2.2.2",
    "numpy>=1.0.0,<2.0.0",
    "plotly>=5.22.0",
    "ortools>=9.10.4067",
    "scikit-learn>=1.5.1",
    "python-ulid>=2.7.0",
    "mypy>=1.10.1",
    "pandas-stubs>=2.2.2.240603",
    "networkx>=3.3",
    "networkx-stubs>=0.0.1",
    "pyqt6>=6.7.1",
]
license = "0BSD"
readme = "readme.md"
requires-python = ">= 3.8"

[project.scripts]
shepherd = "shepherd:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black>=24.4.2",
]

[tool.black]
line-length = 78
target-version = ["py38"]

[tool.isort]
profile = "black"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/shepherd"]
