[package]
name = "shepherd-lib"
description = "flock simulation library"
version = "0.0.0"
authors = ["superwhiskers <whiskerdev@protonmail.com>"]
repository = "https://github.com/superwhiskers/shepherd"
readme = "../readme.md"
edition = "2021"
license = "0BSD"

[dependencies]
itertools = "0.13"
petgraph = "0.6"
rand = "0.8"
statrs = "0.17"
serde_json = "1"
anyhow = "1"
tracing = "0.1"

[dependencies.serde]
version = "1"
features = ["derive"]
